@@ -15,6 +15,8 @@ ENV MINECRAFT_HOME /opt/minecraft
 ENV MINECRAFT_OPTS -server -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
 ENV MINECRAFT_SRC /usr/src/minecraft
 ENV MINECRAFT_VERSION 1.8.8
+ENV MINECRAFT_OPTS "-server -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC"
+
 
 # Add user
 RUN groupadd -g 1000 minecraft && \
